--- a/templates/clients.html
+++ b/templates/clients.html
@@ -33,7 +33,8 @@
                         ({{ "%.1f"|format(client[6]) }})
                     </td>
                     <td>
-                        <a href="{{ url_for('client_detail', client_id=client[0]) }}" class="btn btn-sm btn-primary">View</a>
+                       <a href="{{ url_for('client_detail', client_id=client[0]) }}" class="btn btn-sm btn-primary">View</a>
+<a href="{{ url_for('edit_client', client_id=client[0]) }}" class="btn btn-sm btn-warning">Edit</a>
                     </td>
                 </tr>
                 {% endfor %}
