--- a/templates/loans.html
+++ b/templates/loans.html
@@ -37,6 +37,7 @@
                     </td>
                     <td>
                         <a href="{{ url_for('loan_detail', loan_id=loan[0]) }}" class="btn btn-sm btn-primary">View</a>
+<a href="{{ url_for('edit_loan', loan_id=loan[0]) }}" class="btn btn-sm btn-warning">Edit</a>
                     </td>
                 </tr>
                 {% endfor %}
