Complete rewrite with edit features and custom interest rates

--- a/templates/clients.html
+++ b/templates/clients.html
@@ -9,7 +9,7 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th>Company</th>
+                   <!-- <th>Company</th>-->
                     <th>Contact</th>
                     <th>Email</th>
                     <th>Rating</th>
