--- a/templates/edit_client.html
+++ b/templates/edit_client.html
@@ -6,10 +6,10 @@
 <div class="card">
     <div class="card-body">
         <form method="POST">
-            <div class="mb-3">
+            <!--<div class="mb-3">
                 <label class="form-label">Company Name</label>
                 <input type="text" class="form-control" name="company_name" value="{{ client[1] }}" required>
-            </div>
+            </div>-->
             <div class="mb-3">
                 <label class="form-label">Contact Person</label>
                 <input type="text" class="form-control" name="contact_person" value="{{ client[2] }}" required>
